- Checkin of complete nupack.js calculateMarkup function. All unit tests are now passing as excpected. - Including updated package.json as well due to addtion of BigNumber.js dependency.

--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
   "homepage": "https://github.com/dw523/NuPack#readme",
   "devDependencies": {
     "jasmine-node": "^1.14.5"
+  },
+  "dependencies": {
+    "bignumber.js": "^2.3.0"
   }
 }
